--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "keen": "0.0.1",
+    "keen-ui": "^1.0.0",
     "vue": "^2.3.2"
   },
   "devDependencies": {
