--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,22 @@
 {
   "presets": [
-    ["env", { "modules": false }],
+    ["env", {
+      "modules": false
+    }],
     "stage-2"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": ["transform-runtime", ["babel-plugin-root-import", [{
+    "rootPathSuffix": "src",
+    "rootPathPrefix": "~"
+  },{
+    "rootPathSuffix": "src/store",
+    "rootPathPrefix": "#"
+  }]]],
   "comments": false,
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
-      "plugins": [ "istanbul" ]
+      "plugins": ["istanbul"]
     }
   }
 }
