--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "keen-ui": "^1.0.0",
+    "shortid": "^2.2.8",
     "vue": "^2.3.2"
   },
   "devDependencies": {
@@ -19,6 +20,7 @@
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
+    "babel-plugin-root-import": "^5.1.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-stage-2": "^6.24.1",
@@ -28,11 +30,12 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.1",
     "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
     "eslint-friendly-formatter": "^2.0.7",
+    "eslint-import-resolver-babel-root-import": "0.0.2",
+    "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^2.0.3",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.15.2",
@@ -41,18 +44,18 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.4",
-    "webpack-bundle-analyzer": "^2.6.0",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.7",
     "opn": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^1.3.1",
     "ora": "^1.2.0",
     "rimraf": "^2.6.1",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.7",
     "url-loader": "^0.5.8",
     "vue-loader": "^12.0.3",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.2",
     "webpack": "^2.5.1",
+    "webpack-bundle-analyzer": "^2.6.0",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
